syntax = "proto3";

option go_package = "github.com/cluttrdev/gitlab-exporter/protobuf/typespb";

package gitlabexporter.protobuf;

message NamespaceReference {
    int64 id = 1;
    string full_path = 2;
}

message ProjectReference {
    int64 id = 1;
    string full_path = 2;

    NamespaceReference namespace = 3;
}

message PipelineReference {
    int64 id = 1;
    int64 iid = 2;

    ProjectReference project = 3;
}

message JobReference {
    int64 id = 1;
    string name = 2;

    PipelineReference pipeline = 3;
}

message TestReportReference {
    string id = 1;

    PipelineReference pipeline = 3;
}

message TestSuiteReference {
    string id = 1;

    TestReportReference test_report = 3;
}

message RunnerReference {
    string id = 1;
}

message MergeRequestReference {
    int64 id = 1;
    int64 iid = 2;

    ProjectReference project = 3;
}

message MilestoneReference {
    int64 id = 1;
    int64 iid = 2;

    ProjectReference project = 3;
}

message UserReference {
    int64 id = 1;
    string username = 2;
    string name = 3;
}

enum DeploymentTier {
    DEPLOYMENT_TIER_UNSPECIFIED = 0;
    DEPLOYMENT_TIER_PRODUCTION = 1;
    DEPLOYMENT_TIER_STAGING = 2;
    DEPLOYMENT_TIER_TESTING = 3;
    DEPLOYMENT_TIER_DEVELOPMENT = 4;
    DEPLOYMENT_TIER_OTHER = 5;
}

message EnvironmentReference {
    int64 id = 1;
    string name = 2;
    DeploymentTier tier = 3;

    ProjectReference project = 4;
}
